fix carousel buttons not centered

--- a/src/components/Carousel/styles.scss
+++ b/src/components/Carousel/styles.scss
@@ -72,5 +72,5 @@
 }
 
 .carousel:hover .show {
-  display: block;
+  display: flex;
 }
